--- a/template/package.json
+++ b/template/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
