--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -6,7 +6,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "*": ["src/*"],
+      "@core": ["src/core/index"],
+      "@core/*": ["src/core/*"],
       "tests/*": ["tests/*"]
     }
   }
