--- a/template/package.json
+++ b/template/package.json
@@ -26,6 +26,8 @@
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-config": "^1.4.11",
+    "react-native-fs": "^2.20.0",
+    "react-native-logs": "^5.0.1",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0"
   },
