--- a/template/package.json
+++ b/template/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-config": "^1.4.11",
