--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "0.27.2",
     "react": "18.1.0",
@@ -29,7 +33,11 @@
     "react-native-config": "^1.4.11",
     "react-native-error-boundary": "^1.1.16",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.7.1",
     "react-native-logs": "^5.0.1",
+    "react-native-reanimated": "^2.11.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0"
   },
