--- a/template/android/app/build.gradle
+++ b/template/android/app/build.gradle
@@ -16,6 +16,16 @@ project.ext.envConfigFiles = [
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 /**
+ * react-native-vector-icons
+ */
+
+// project.ext.vectoricons = [
+//     iconFontNames: ['MaterialIcons.ttf', 'EvilIcons.ttf']
+// ]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
+/**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
  * These basically call `react-native bundle` with the correct arguments during the Android build
