--- a/template/package.json
+++ b/template/package.json
@@ -27,6 +27,8 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.8.6",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
     "axios": "0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
@@ -38,6 +40,7 @@
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0"
   },
