--- a/template/package.json
+++ b/template/package.json
@@ -21,6 +21,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@formatjs/intl-datetimeformat": "^6.3.1",
+    "@formatjs/intl-displaynames": "^6.1.4",
+    "@formatjs/intl-getcanonicallocales": "^2.0.4",
+    "@formatjs/intl-listformat": "^7.1.3",
+    "@formatjs/intl-locale": "^3.0.7",
+    "@formatjs/intl-numberformat": "^8.2.0",
+    "@formatjs/intl-pluralrules": "^5.1.4",
+    "@formatjs/intl-relativetimeformat": "^11.1.4",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
@@ -30,12 +38,15 @@
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
     "axios": "0.27.2",
+    "i18next": "^21.10.0",
     "react": "18.1.0",
+    "react-i18next": "^11.18.6",
     "react-native": "0.70.3",
     "react-native-config": "^1.4.11",
     "react-native-error-boundary": "^1.1.16",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-localize": "^2.2.4",
     "react-native-logs": "^5.0.1",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^4.4.1",
