--- a/template/package.json
+++ b/template/package.json
@@ -29,6 +29,7 @@
     "@formatjs/intl-numberformat": "^8.2.0",
     "@formatjs/intl-pluralrules": "^5.1.4",
     "@formatjs/intl-relativetimeformat": "^11.1.4",
+    "@hookform/resolvers": "^2.9.9",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
@@ -40,6 +41,7 @@
     "axios": "0.27.2",
     "i18next": "^21.10.0",
     "react": "18.1.0",
+    "react-hook-form": "^7.37.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.3",
     "react-native-config": "^1.4.11",
@@ -53,7 +55,8 @@
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.4",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
