Setup react native fast image.

--- a/template/package.json
+++ b/template/package.json
@@ -46,6 +46,7 @@
     "react-native": "0.70.3",
     "react-native-config": "^1.4.11",
     "react-native-error-boundary": "^1.1.16",
+    "react-native-fast-image": "^8.6.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-localize": "^2.2.4",
